--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -52,7 +52,8 @@
         "precommit": "tsc -b && lint-staged",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "test-storybook": "test-storybook"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -110,6 +111,7 @@
         "@a2a-js/sdk": "^0.3.2",
         "@eslint/js": "^9.25.0",
         "@storybook/react-vite": "^9.1.10",
+        "@storybook/test-runner": "^0.20.1",
         "@tailwindcss/typography": "^0.5.16",
         "@testing-library/cypress": "^10.0.3",
         "@types/js-yaml": "^4.0.9",
@@ -117,21 +119,25 @@
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@vitejs/plugin-react": "^4.4.1",
+        "concurrently": "^9.1.2",
         "cypress": "^14.5.4",
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "eslint-plugin-storybook": "^9.1.10",
         "globals": "^16.0.0",
+        "http-server": "^14.1.1",
         "lint-staged": "^16.2.3",
         "mocha-junit-reporter": "^2.2.1",
+        "playwright": "^1.49.1",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.13",
         "storybook": "^9.1.10",
         "tw-animate-css": "^1.3.3",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "wait-on": "^8.0.1"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-arm64-gnu": "4.44.0",
