--- a/templates/logging_config_template.yaml
+++ b/templates/logging_config_template.yaml
@@ -7,7 +7,8 @@ formatters:
 
   jsonFormatter:
     "()": pythonjsonlogger.jsonlogger.JsonFormatter
-    format: "%(asctime)s %(levelname)s %(threadName)s %(name)s %(message)s"
+    format: "%(timestamp)s %(levelname)s %(threadName)s %(name)s %(message)s"
+    timestamp: "timestamp"
 
 handlers:
   streamHandler:
