feat: DATAGO-116432 prompt library (#517)
* feat(prompts): Add prompt templates with a card-based Prompts page and AI-assisted prompt template builder. Also supports prompt version historyand ability to restore older prompts.

- Implement AI-assisted prompt builder using LLM for template generation (uses liteLLM and LLM_SERVICE_GENERAL_MODEL_NAME env variable)
- Add version history with restore functionality
- Support variable placeholders ({{variable_name}}) in prompts
- Enable prompt editing with automatic version creation
- Include search functionality and empty states
- Add VariableDialog for filling prompt variables before use

Backend:
- Add PromptBuilderAssistant service with LiteLLM integration
- Update PATCH endpoint to create new versions on prompt text changes
- Add version management endpoints (list, restore)
- Update DTOs to support prompt text updates

* feat(prompts): Add category multiselect filter to Prompts page

- Add category filter dropdown next to search bar with Filter icon
- Support multiselect with checkboxes for multiple categories
- Show selected count badge and "Clear all" button
- Filter prompts by both search query AND selected categories

* feat(prompts): Add feature flags for Prompts library

- Add promptLibrary flag (requires SQL persistence, defaults to true)
- Add promptAIAssisted flag (requires LLM config, auto-disabled if missing)
- Add promptVersionHistory flag (defaults to true)
- Add promptSharing placeholder flag in the backend (future feature, defaults to false)
- Conditionally show Prompts navigation based on promptLibrary flag
- Disable AI-Assisted button when LLM not configured
- Hide version history buttons when feature disabled
- Auto-disable prompts if session_service is not SQL
- Explicitly set false values for disabled features

Backend: config.py checks SQL requirement and LLM availability
Frontend: App.tsx, CreatePromptCard, PromptDisplayCard respect flags

* feat(prompts): Add automated tests for Prompts feature a

--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -99,6 +99,9 @@ jobs:
       - name: Build UI package
         run: npm run build-package
 
+      - name: Build Storybook
+        run: npm run build-storybook
+
       - name: Run WhiteSource Scan
         id: whitesource_scan
         uses: SolaceDev/solace-public-workflows/.github/actions/whitesource-scan@main
