--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,6 +174,9 @@ markers = [
     "security: marks tests related to security and authorization",
     "error: marks tests related to error handling scenarios",
     "validation: marks tests related to input validation",
+    "prompts: marks tests related to the prompts library feature",
+    "versioning: marks tests related to version management",
+    "search: marks tests related to search and filtering functionality",
 
     # Agent Tools
     # Markers for the built-in agent tools.
