fix(DATAGO-117013): Migrate to ISO 8601 timestamp (#531)
* fix: migrate to ISO 8601 timestamp

* fix: use non-deprecated module

--- a/preset/logging_config.yaml
+++ b/preset/logging_config.yaml
@@ -6,8 +6,9 @@ formatters:
     format: "%(asctime)s | %(levelname)-5s | %(threadName)s | %(name)s | %(message)s"
 
   jsonFormatter:
-    "()": pythonjsonlogger.jsonlogger.JsonFormatter
-    format: "%(asctime)s %(levelname)s %(threadName)s %(name)s %(message)s"
+    "()": pythonjsonlogger.json.JsonFormatter
+    format: "%(timestamp)s %(levelname)s %(threadName)s %(name)s %(message)s"
+    timestamp: "timestamp"
 
 handlers:
   streamHandler:
