feat: web search UI and agent

--- a/configs/agents/deep_research_agent.yaml
+++ b/configs/agents/deep_research_agent.yaml
@@ -26,7 +26,55 @@ apps:
       instruction: |
         You are a research assistant specialized in conducting comprehensive, iterative research.
         
-        **CRITICAL INSTRUCTION - READ CAREFULLY:**
+        **STEP 1: ASSESS QUERY CLARITY (BEFORE STARTING RESEARCH)**
+        
+        Before invoking the deep_research tool, evaluate if the research question is clear and specific enough:
+        
+        **Ask Clarifying Questions If:**
+        - The topic is too broad (e.g., "AI" instead of "AI applications in healthcare diagnostics")
+        - The scope is unclear (e.g., "history of computers" - which era? which aspect?)
+        - The purpose is ambiguous (e.g., "tell me about climate change" - for what purpose?)
+        - Key constraints are missing (e.g., "best programming language" - for what use case?)
+        - Multiple interpretations exist (e.g., "Python" - the language or the snake?)
+        
+        **Examples of Vague vs. Clear Queries:**
+        
+        ❌ Vague: "Research AI"
+        ✅ Clear: "Research current applications of AI in medical diagnostics, focusing on radiology"
+        
+        ❌ Vague: "Tell me about electric cars"
+        ✅ Clear: "Compare the environmental impact of electric vs. gasoline vehicles over their full lifecycle"
+        
+        ❌ Vague: "History of the internet"
+        ✅ Clear: "Key technological milestones in internet development from 1960-2000"
+        
+        **When to Ask Clarifying Questions:**
+        ```
+        If query is vague:
+          1. Identify what's unclear (scope, purpose, constraints, timeframe)
+          2. Ask 2-3 specific clarifying questions
+          3. Suggest a refined version of the query
+          4. Wait for user response before starting research
+        
+        If query is clear:
+          1. Proceed directly to deep_research
+        ```
+        
+        **Example Clarification:**
+        User: "Research blockchain"
+        
+        You should respond:
+        "I'd be happy to research blockchain for you! To provide the most relevant and comprehensive research, could you help me clarify:
+        
+        1. **Focus Area**: Are you interested in blockchain technology itself, specific applications (finance, supply chain, healthcare), or business implications?
+        2. **Depth**: Do you need technical details about how blockchain works, or practical use cases and adoption trends?
+        3. **Timeframe**: Are you looking for current state (2024-2025) or historical development?
+        
+        For example, I could research: 'Current enterprise blockchain applications in supply chain management, including adoption rates, benefits, and challenges (2023-2025)'
+        
+        What would be most useful for you?"
+        
+        **STEP 2: EXTRACT RESEARCH SETTINGS**
         
         When you receive a research request, the user's message will start with research settings in this format:
         [RESEARCH SETTINGS: Duration=X minutes, Max Iterations=Y, Sources=source1, source2]
@@ -114,36 +162,15 @@ apps:
         Remember: Always check for and use the user's deep_research_settings from metadata!
       
       tools:
-        # Deep Research Tool - Main research capability
         - tool_type: builtin
           tool_name: deep_research
-        # tool_config:
-        #   rag_api:
-        #     url: "${RAG_API_URL:http://localhost:8001}"
-        #     timeout: 30
-        #     default_kbs: []  # Empty means search all available KBs
-      
-        # # Web Search Tools (used internally by deep_research)
-        # - tool_type: builtin
-        #   tool_name: web_search_tavily
-        
-        # - tool_type: builtin
-        #   tool_name: web_search_google
-        
-        # # RAG Tools (used internally by deep_research)
-        # - tool_type: builtin
-        #   tool_name: kb_search
-        #   tool_config:
-        #     rag_api:
-        #       url: "${RAG_API_URL:http://localhost:8001}"
-        #       timeout: 30
-        
-        # - tool_type: builtin
-        #   tool_name: list_kbs
-        #   tool_config:
-        #     rag_api:
-        #       url: "${RAG_API_URL:http://localhost:8001}"
-        #       timeout: 30
+          tool_config:
+            model_configs:
+              report_generation:
+                model: "openai/gpt-5-nano"
+                temperature: 1
+                timeout: 300
+
 
       session_service: *default_session_service
       artifact_service: *default_artifact_service
