--- a/client/webui/frontend/tsconfig.lib.json
+++ b/client/webui/frontend/tsconfig.lib.json
@@ -14,6 +14,8 @@
         "lib": ["ES2023", "DOM", "DOM.Iterable"],
         "downlevelIteration": true,
         "skipLibCheck": true,
+        "types": [],
+        "typeRoots": [],
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
