--- a/client/webui/frontend/tsconfig.lib.json
+++ b/client/webui/frontend/tsconfig.lib.json
@@ -14,8 +14,7 @@
         "lib": ["ES2023", "DOM", "DOM.Iterable"],
         "downlevelIteration": true,
         "skipLibCheck": true,
-        "types": [],
-        "typeRoots": [],
+        "types": ["node"],
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
