fix(DATAGO-117121): Fix for inline templates (#529)
## Summary

Adds inline Liquid template support for dynamic rendering of artifact data (CSV, JSON, YAML) directly in agent responses, with automatic resolution by the gateway.

## Key changes:
  - New «««template: data="file.csv" ...»»» fenced block syntax alongside existing save_artifact
  - Liquid template renderer with data context preparation (CSV → headers/data_rows, JSON → items/object keys)
  - Template resolution in gateway's late embed pipeline (alongside existing artifact_content embeds)
  - Enhanced stream parser to detect/handle nested template blocks inside artifacts
  - Added TemplateBlockData A2A status messages for template metadata propagation
  - Consolidated fenced block syntax rules in agent instructions
  - New dependency: python-liquid==2.1.0

  Testing:
  - Template rendering with JSONPath/limit parameters
  - CSV/JSON/YAML data context handling
  - Nested templates inside save_artifact blocks
  - Automatic template resolution in artifact_return flow

  Behavioral notes:
  - Templates render inline faster than LLM reformatting artifacts manually
  - Late resolution ensures data freshness at display time
  - Nesting depth tracking prevents premature block closure
  
  
Note that the code has maintained its ability to process old style mustache templates in the «artifact_content » embeds. However, it has removed the prompting for the LLM to create this content. There may be artifacts in chat sessions that still contain these old templates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "python-jwt==4.1.0",
     "asteval==1.0.6",
     "pystache==0.6.8",
+    "python-liquid==2.1.0",
     "pandas==2.3.2",
     "numpy==2.2.6",
     "plotly==6.3.0",
