feat(message-actions): initial commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,8 @@ dependencies = [
     "alembic==1.16.5",
     "openai==1.99.9",
     "boto3==1.40.37",
-    "psycopg2-binary==2.9.10"
+    "psycopg2-binary==2.9.10",
+    "azure-cognitiveservices-speech==1.41.1"
 ]
 
 [project.optional-dependencies]
