--- a/client/webui/frontend/tsconfig.node.json
+++ b/client/webui/frontend/tsconfig.node.json
@@ -21,5 +21,5 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true
     },
-    "include": ["vite.config.ts", ".storybook/main.ts"]
+    "include": ["vite.config.ts", "vite.lib.config.ts", ".storybook/main.ts"]
 }
