--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -111,6 +111,7 @@
     "devDependencies": {
         "@a2a-js/sdk": "^0.3.2",
         "@eslint/js": "^9.25.0",
+        "@storybook/addon-vitest": "^10.0.7",
         "@storybook/react-vite": "^10.0.7",
         "@tailwindcss/typography": "^0.5.16",
         "@testing-library/cypress": "^10.0.3",
@@ -133,7 +134,11 @@
         "tw-animate-css": "^1.3.3",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vitest": "^4.0.8",
+        "playwright": "^1.56.1",
+        "@vitest/browser-playwright": "^4.0.8",
+        "@vitest/coverage-v8": "^4.0.8"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-arm64-gnu": "4.44.0",
