--- a/client/webui/frontend/tsconfig.app.json
+++ b/client/webui/frontend/tsconfig.app.json
@@ -27,5 +27,5 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["src", ".storybook/preview.tsx"]
+    "include": ["src", ".storybook/vitest.setup.ts", ".storybook/preview.tsx"]
 }
