feat: use vitest for running storybook tests

--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -52,7 +52,7 @@
         "precommit": "tsc -b && lint-staged",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "test:storybook": "vitest --project=storybook"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
