--- a/templates/webui.yaml
+++ b/templates/webui.yaml
@@ -50,3 +50,4 @@ apps:
       frontend_welcome_message: ${FRONTEND_WELCOME_MESSAGE}
       frontend_bot_name: ${FRONTEND_BOT_NAME}
       frontend_collect_feedback: ${FRONTEND_COLLECT_FEEDBACK}
+      frontend_logo_url: "${WEBUI_FRONTEND_LOGO_URL}"
