feat: project export and import feature with artifact support, prompt import nav fix

--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -86,6 +86,7 @@
         "html-react-parser": "^5.2.5",
         "js-yaml": "^4.1.0",
         "json-edit-react": "^1.27.2",
+        "jszip": "^3.10.1",
         "lucide-react": "^0.511.0",
         "marked": "^15.0.12",
         "react": "19.0.0",
