feat(DATAGO-117336): Add support for custom frontend logo URL in Web UI configuration (#553)
* feat: Add support for custom frontend logo URL in Web UI configuration

* feat: Add default logo URL to mock configuration context

* Refactor web UI configuration to use placeholders for frontend settings

- Updated `create_webui_gateway_config` function to use placeholders for welcome message, bot name, logo URL, and feedback collection options.
- Modified `NavigationHeader` component to ensure proper rendering of the logo with error handling.
- Adjusted `webui.yaml` to replace variable references with placeholders for frontend configuration.

* feat: Update WebUI configuration to use placeholders for frontend messages and settings

* feat: Update prompt for Frontend Logo URL to specify accepted formats

--- a/preset/agents/basic/webui.yaml
+++ b/preset/agents/basic/webui.yaml
@@ -57,6 +57,7 @@ apps:
             Format responses to the user in Markdown using appropriate formatting.
 
       # --- Frontend Config Passthrough ---
-      frontend_welcome_message: Hello, how can I assist you?
-      frontend_bot_name: Solace Agent Mesh
-      frontend_collect_feedback: false
+      frontend_welcome_message: ${FRONTEND_WELCOME_MESSAGE, "Hello, how can I assist you?"}
+      frontend_bot_name: ${FRONTEND_BOT_NAME, Solace Agent Mesh}
+      frontend_collect_feedback: ${FRONTEND_COLLECT_FEEDBACK, false}
+      frontend_logo_url: "${WEBUI_FRONTEND_LOGO_URL}"
