--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,12 +60,7 @@ jobs:
       - name: Sync and verify uv.lock
         run: |
           # Sync lock file with pyproject.toml
-          uv sync
-          # Check if lock file was modified
-          if ! git diff --quiet uv.lock; then
-            echo "Warning: uv.lock was out of sync and has been updated"
-            # In CI, we just warn but continue. In development, developers should commit the updated lock file.
-          fi
+          uv lock
 
       - name: Get Commit Hash
         id: get_commit_hash
