--- a/client/webui/frontend/package.json
+++ b/client/webui/frontend/package.json
@@ -52,7 +52,8 @@
         "precommit": "tsc -b && lint-staged",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "test:storybook": "vitest --project=storybook",
+        "ci:storybook": "CI=true npm run test:storybook"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -111,7 +112,8 @@
     "devDependencies": {
         "@a2a-js/sdk": "^0.3.2",
         "@eslint/js": "^9.25.0",
-        "@storybook/react-vite": "^9.1.10",
+        "@storybook/addon-vitest": "^10.0.7",
+        "@storybook/react-vite": "^10.0.7",
         "@tailwindcss/typography": "^0.5.16",
         "@testing-library/cypress": "^10.0.3",
         "@types/js-yaml": "^4.0.9",
@@ -123,17 +125,21 @@
         "eslint": "^9.25.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
-        "eslint-plugin-storybook": "^9.1.10",
+        "eslint-plugin-storybook": "^10.0.7",
         "globals": "^16.0.0",
         "lint-staged": "^16.2.3",
         "mocha-junit-reporter": "^2.2.1",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.13",
-        "storybook": "^9.1.10",
+        "storybook": "^10.0.7",
         "tw-animate-css": "^1.3.3",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.30.1",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vitest": "^4.0.8",
+        "playwright": "^1.56.1",
+        "@vitest/browser-playwright": "^4.0.8",
+        "@vitest/coverage-v8": "^4.0.8"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-arm64-gnu": "4.44.0",
