--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -20,6 +20,14 @@ on:
         required: true
       DOCKER_PASSWORD:
         required: true
+      SAM_AWS_ACCESS_KEY_ID:
+        required: true
+      SAM_AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_DEFAULT_REGION:
+        required: true
+      SAM_AWS_ECR_REGISTRY:
+        required: true
 
   workflow_dispatch:
     inputs:
@@ -72,6 +80,16 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a # v4.3.1
+        with:
+          aws-access-key-id: ${{ secrets.SAM_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.SAM_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+
+      - name: Login to Amazon ECR (for cache)
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
       - name: Login to Docker Hub
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
@@ -86,8 +104,8 @@ jobs:
           platforms: ${{ matrix.platform.name }}
           tags: solace/solace-agent-mesh:${{ inputs.version }}-${{ steps.get_commit_hash.outputs.short_sha }}-${{ matrix.platform.tag_suffix }}
           push: true
-          cache-from: type=gha,scope=${{ matrix.platform.tag_suffix }}
-          cache-to: type=gha,scope=${{ matrix.platform.tag_suffix }},mode=max
+          cache-from: type=registry,ref=${{ secrets.SAM_AWS_ECR_REGISTRY }}/solace-agent-mesh:buildcache-${{ matrix.platform.tag_suffix }}
+          cache-to: type=registry,ref=${{ secrets.SAM_AWS_ECR_REGISTRY }}/solace-agent-mesh:buildcache-${{ matrix.platform.tag_suffix }},mode=max
 
   # ----------------------------------------------------
   # PHASE 2: Merge Multi-Platform Manifest and Push
